# ziriz-stellar-contract

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
contract/: Cargo.toml
contract-client/: README.md  package-lock.json  package.json
contract-client/src/: index.ts
contract/src/: admin.rs  admin_storage.rs  balance.rs  bump.rs  contract.rs  data_type.rs  events.rs  fans.rs  lib.rs  metadata.rs  metadata_storage.rs  nft.rs  nft_contract.rs  owner.rs  owner_storage.rs  series.rs  series_storage.rs  share.rs  share_storage.rs  storage_types.rs  test.rs  token_data.rs  token_storage.rs  utils.rs
contract/src/wasm/: ziriz-series.wasm
series-contract/: Cargo.toml
series-contract/src/: admin_storage.rs  bump.rs  lib.rs  metadata_storage.rs  nft_contract.rs  storage_types.rs  test.rs  token_storage.rs  utils.rs
src/: client.ts  init.ts  wallet.ts
tests/: client.spec.ts  client.test.ts
