[workspace]
members = ["./series-contract", "./contract"]
resolver = "2"

[workspace.dependencies]
loam-sdk = { version = "0.6.8", git = "https://github.com/loambuild/loam-sdk", rev = "1943afbf1a789c677f28f55716bf6c8f25ae9900" }
soroban-token-sdk = "21.0.1-preview.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
